--- a/index.html
+++ b/index.html
@@ -123,6 +123,19 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Google AdSense Start -->
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2978991016517284"
+                         crossorigin="anonymous"></script>
+                    <ins class="adsbygoogle"
+                         style="display:block; text-align:center;"
+                         data-ad-layout="in-article"
+                         data-ad-format="fluid"
+                         data-ad-client="ca-pub-2978991016517284"
+                         data-ad-slot="4337278718"></ins>
+                    <script>
+                         (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                    <!-- Google AdSense End -->
                     <div class="bg-white rounded-xl shadow-xl p-3 md:p-6">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-semibold text-gray-800">Investment Growth</h3>
