--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Financial Calculators</title>
+    <title>Financial Calculators Hub</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
@@ -246,7 +246,7 @@
 
         <!-- EMI Calculator (Floating Rate) -->
         <div id="emi-floating" class="tab-content">
-            <div class="max-w-4xl mx-auto">
+            <div class="grid grid-cols-1 xl:grid-cols-2 gap-6 md:gap-8">
                 <div class="calculator-card rounded-xl shadow-xl p-4 md:p-6 text-white">
                     <h2 class="text-lg md:text-2xl font-bold mb-4 md:mb-6 flex items-center">
                         🏠 EMI Calculator (Floating Interest Rate)
@@ -270,9 +270,9 @@
                     </form>
                 </div>
                 
-                <div id="floatingResult" class="result-card rounded-xl shadow-xl p-4 md:p-6 text-white mt-6 md:mt-8 hidden">
+                <div id="floatingResult" class="result-card rounded-xl shadow-xl p-4 md:p-6 text-white hidden">
                     <h3 class="text-lg md:text-xl font-bold mb-3 md:mb-4">📊 EMI Calculation Results</h3>
-                    <div class="grid grid-cols-1 md:grid-cols-3 gap-3 md:gap-4">
+                    <div class="grid grid-cols-1 gap-3 md:gap-4">
                         <div class="text-center bg-white bg-opacity-20 rounded-lg p-3">
                             <div class="text-lg md:text-2xl font-bold" id="floatingEMI"></div>
                             <div class="text-xs md:text-sm opacity-80">Monthly EMI</div>
@@ -292,7 +292,7 @@
 
         <!-- EMI Calculator (Flat Rate) -->
         <div id="emi-flat" class="tab-content">
-            <div class="max-w-4xl mx-auto">
+            <div class="grid grid-cols-1 xl:grid-cols-2 gap-6 md:gap-8">
                 <div class="calculator-card rounded-xl shadow-xl p-4 md:p-6 text-white">
                     <h2 class="text-lg md:text-2xl font-bold mb-4 md:mb-6 flex items-center">
                         🏦 EMI Calculator (Flat Interest Rate)
@@ -316,9 +316,9 @@
                     </form>
                 </div>
                 
-                <div id="flatResult" class="result-card rounded-xl shadow-xl p-4 md:p-6 text-white mt-6 md:mt-8 hidden">
+                <div id="flatResult" class="result-card rounded-xl shadow-xl p-4 md:p-6 text-white hidden">
                     <h3 class="text-lg md:text-xl font-bold mb-3 md:mb-4">📊 EMI Calculation Results</h3>
-                    <div class="grid grid-cols-1 md:grid-cols-3 gap-3 md:gap-4">
+                    <div class="grid grid-cols-1 gap-3 md:gap-4">
                         <div class="text-center bg-white bg-opacity-20 rounded-lg p-3">
                             <div class="text-lg md:text-2xl font-bold" id="flatEMI"></div>
                             <div class="text-xs md:text-sm opacity-80">Monthly EMI</div>
@@ -1142,5 +1142,5 @@
             });
         }
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96acf1e9e00491da',t:'MTc1NDQ2NjY0My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96acffc354b75477',t:'MTc1NDQ2NzIxMS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
