--- a/index.html
+++ b/index.html
@@ -279,22 +279,22 @@
                 <div class="space-y-4 md:space-y-6">
                     <div id="floatingResult" class="result-card rounded-xl shadow-xl p-4 md:p-6 text-white hidden">
                         <h3 class="text-lg md:text-xl font-bold mb-3 md:mb-4">📊 EMI Calculation Results</h3>
-                        <div class="grid grid-cols-1 gap-3 md:gap-4">
-                            <div class="text-center bg-white bg-opacity-20 rounded-lg p-3">
-                                <div class="text-lg md:text-2xl font-bold" id="floatingEMI"></div>
-                                <div class="text-xs md:text-sm opacity-80">Monthly EMI</div>
+                        <div class="space-y-2 md:space-y-3">
+                            <div class="flex justify-between text-sm md:text-base">
+                                <span>Monthly EMI:</span>
+                                <span id="floatingEMI" class="font-bold"></span>
                             </div>
-                            <div class="text-center bg-white bg-opacity-20 rounded-lg p-3">
-                                <div class="text-lg md:text-2xl font-bold" id="floatingTotalInterest"></div>
-                                <div class="text-xs md:text-sm opacity-80">Total Interest</div>
+                            <div class="flex justify-between text-sm md:text-base">
+                                <span>Total Interest:</span>
+                                <span id="floatingTotalInterest" class="font-bold"></span>
                             </div>
-                            <div class="text-center bg-white bg-opacity-20 rounded-lg p-3">
-                                <div class="text-lg md:text-2xl font-bold" id="floatingTotalAmount"></div>
-                                <div class="text-xs md:text-sm opacity-80">Total Amount</div>
+                            <div class="flex justify-between text-sm md:text-base">
+                                <span>Total Amount:</span>
+                                <span id="floatingTotalAmount" class="font-bold"></span>
                             </div>
-                            <div class="text-center bg-white bg-opacity-20 rounded-lg p-3">
-                                <div class="text-lg md:text-2xl font-bold" id="floatingActualTenure"></div>
-                                <div class="text-xs md:text-sm opacity-80">Actual Tenure</div>
+                            <div class="flex justify-between text-base md:text-lg border-t pt-2 font-bold">
+                                <span>Actual Tenure:</span>
+                                <span id="floatingActualTenure" class="font-bold"></span>
                             </div>
                         </div>
                     </div>
@@ -379,20 +379,22 @@
                     </form>
                 </div>
                 
-                <div id="flatResult" class="result-card rounded-xl shadow-xl p-4 md:p-6 text-white hidden">
-                    <h3 class="text-lg md:text-xl font-bold mb-3 md:mb-4">📊 EMI Calculation Results</h3>
-                    <div class="grid grid-cols-1 gap-3 md:gap-4">
-                        <div class="text-center bg-white bg-opacity-20 rounded-lg p-3">
-                            <div class="text-lg md:text-2xl font-bold" id="flatEMI"></div>
-                            <div class="text-xs md:text-sm opacity-80">Monthly EMI</div>
-                        </div>
-                        <div class="text-center bg-white bg-opacity-20 rounded-lg p-3">
-                            <div class="text-lg md:text-2xl font-bold" id="flatTotalInterest"></div>
-                            <div class="text-xs md:text-sm opacity-80">Total Interest</div>
-                        </div>
-                        <div class="text-center bg-white bg-opacity-20 rounded-lg p-3">
-                            <div class="text-lg md:text-2xl font-bold" id="flatTotalAmount"></div>
-                            <div class="text-xs md:text-sm opacity-80">Total Amount</div>
+                <div class="space-y-4 md:space-y-6">
+                    <div id="flatResult" class="result-card rounded-xl shadow-xl p-4 md:p-6 text-white hidden">
+                        <h3 class="text-lg md:text-xl font-bold mb-3 md:mb-4">📊 EMI Calculation Results</h3>
+                        <div class="space-y-2 md:space-y-3">
+                            <div class="flex justify-between text-sm md:text-base">
+                                <span>Monthly EMI:</span>
+                                <span id="flatEMI" class="font-bold"></span>
+                            </div>
+                            <div class="flex justify-between text-sm md:text-base">
+                                <span>Total Interest:</span>
+                                <span id="flatTotalInterest" class="font-bold"></span>
+                            </div>
+                            <div class="flex justify-between text-base md:text-lg border-t pt-2 font-bold">
+                                <span>Total Amount:</span>
+                                <span id="flatTotalAmount" class="font-bold"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -1469,5 +1471,5 @@
             }
         }
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96ad10eaa03e5952',t:'MTc1NDQ2NzkxMy4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96ad22f0a3c489a2',t:'MTc1NDQ2ODY1Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
